# azure-graph-scripts

./: LICENSE  README.md  pyproject.toml
src/: b2cusers.py
src/azure-graph-scripts/: mggraph.py
